<resources>
    <string name="blank"> </string>
    <string name="app_name">A01e</string>
    <string name="app_location">AirA01a</string>
    <string name="action_refresh">Refresh</string>
    <string name="finish_refresh">Finish refresh.</string>
    <string name="dialog_positive_execute">OK</string>
    <string name="dialog_negative_cancel">Cancel</string>
    <string name="take_photo">Take Photo</string>
    <string name="permission_not_granted">Permissions not granted by the user.</string>
    <string name="capture_success">Photo capture succeeded: </string>
    <string name="dialog_confirm_title_output_log">Share debug log</string>
    <string name="dialog_confirm_message_output_log">Share the debug log, OK?</string>

    <string name="pref_cat_gokigen">GOKIGEN</string>
    <string name="pref_instruction_manual">Instructions</string>
    <string name="pref_privacy_policy">Privacy Policy</string>
    <string name="pref_degug_info">Debug Information</string>
    <string name="pref_summary_debug_info">LogCat Information</string>

    <string name="pref_use_camerax_preview">Use Camera preview(need restart)</string>

    <string name="notification_title">Use Notification</string>

    <string name="pref_cat_application_control">App. Control</string>
    <string name="pref_exit_power_off">Exit Application</string>
    <string name="pref_summary_exit_power_off"> </string>
    <string name="pref_wifi_settings">WIFI Settings</string>
    <string name="pref_summary_wifi_settings"> </string>

    <string name="pref_cat_application_settings">App. Settings</string>
    <string name="save_local_location">Save local location</string>

    <string name="dialog_title_exit_application">Exit Application</string>
    <string name="dialog_message_exit_application">Exit Application</string>

    <string name="data_saving">Saving&#8230;</string>
    <string name="save_image_failure">Save image is failed.</string>

    <string name="pref_cat_internal_camera_settings">Internal Camera Settings</string>
    <string name="pref_only_one_camera_x">Use ONLY single cameraX</string>
    <string name="pref_summary_only_one_camera_x">If you cannot use camera simultaneously, please set this switch on.</string>

    <string name="pref_self_timer_count">Self Timer Seconds</string>

    <string name="pref_cat_camera">Camera</string>
    <string name="pref_capture_both_camera_and_live_view">Capture LiveView Image</string>
    <string name="pref_summary_capture_both_live_view">Captures a LiveView image.</string>
    <string name="pref_capture_only_live_view">DO NOT USE REMOTE SHUTTER</string>
    <string name="pref_summary_capture_only_live_view"> </string>
    <string name="pref_cache_live_view_pictures">Delay live view picture</string>
    <string name="pref_summary_cache_live_view_pictures">This switch effects after restart. </string>
    <string name="pref_number_of_cache_pictures">Max number of cache pictures</string>
    <string name="pref_summary_number_of_cache_pictures">Set number of cache pictures. (Default:500, enables after restart.)</string>

    <string name="pref_connection_method">Camera Connection Method</string>
    <string name="pref_summary_connection_method"> </string>

    <string name="label_connection_method1">CAMERA 1 (LEFT UP)</string>
    <string name="label_connection_method2">CAMERA 2 (RIGHT UP)</string>
    <string name="label_connection_method3">CAMERA 3 (LEFT MIDDLE UP)</string>
    <string name="label_connection_method4">CAMERA 4 (RIGHT MIDDLE UP)</string>
    <string name="label_connection_method5">CAMERA 5 (LEFT MIDDLE DOWN)</string>
    <string name="label_connection_method6">CAMERA 6 (RIGHT MIDDLE DOWN)</string>
    <string name="label_connection_method7">CAMERA 7 (LEFT DOWN)</string>
    <string name="label_connection_method8">CAMERA 8 (RIGHT DOWN)</string>

    <string name="pref_connection_method1">CONNECTION METHOD</string>
    <string name="pref_connection_method2">CONNECTION METHOD</string>
    <string name="pref_connection_method3">CONNECTION METHOD</string>
    <string name="pref_connection_method4">CONNECTION METHOD</string>
    <string name="pref_connection_method5">CONNECTION METHOD</string>
    <string name="pref_connection_method6">CONNECTION METHOD</string>
    <string name="pref_connection_method7">CONNECTION METHOD</string>
    <string name="pref_connection_method8">CONNECTION METHOD</string>

    <string name="pref_connection_sequence1">CONNECTION SEQUENCE</string>
    <string name="pref_connection_sequence2">CONNECTION SEQUENCE</string>
    <string name="pref_connection_sequence3">CONNECTION SEQUENCE</string>
    <string name="pref_connection_sequence4">CONNECTION SEQUENCE</string>
    <string name="pref_connection_sequence5">CONNECTION SEQUENCE</string>
    <string name="pref_connection_sequence6">CONNECTION SEQUENCE</string>
    <string name="pref_connection_sequence7">CONNECTION SEQUENCE</string>
    <string name="pref_connection_sequence8">CONNECTION SEQUENCE</string>

    <string name="pref_show_grid">Show Grid</string>
    <string name="pref_summary_show_grid"> </string>

    <string name="pref_camera_option11">OPTION1</string>
    <string name="pref_summary_camera_option11"> </string>
    <string name="pref_camera_option21">OPTION2</string>
    <string name="pref_summary_camera_option21"> </string>
    <string name="pref_camera_option31">OPTION3</string>
    <string name="pref_summary_camera_option31"> </string>
    <string name="pref_camera_option41">OPTION4</string>
    <string name="pref_summary_camera_option41"> </string>
    <string name="pref_camera_option51">OPTION5</string>
    <string name="pref_summary_camera_option51"> </string>

    <string name="pref_camera_option12">OPTION1</string>
    <string name="pref_summary_camera_option12"> </string>
    <string name="pref_camera_option22">OPTION2</string>
    <string name="pref_summary_camera_option22"> </string>
    <string name="pref_camera_option32">OPTION3</string>
    <string name="pref_summary_camera_option32"> </string>
    <string name="pref_camera_option42">OPTION4</string>
    <string name="pref_summary_camera_option42"> </string>
    <string name="pref_camera_option52">OPTION5</string>
    <string name="pref_summary_camera_option52"> </string>

    <string name="pref_camera_option13">OPTION1</string>
    <string name="pref_summary_camera_option13"> </string>
    <string name="pref_camera_option23">OPTION2</string>
    <string name="pref_summary_camera_option23"> </string>
    <string name="pref_camera_option33">OPTION3</string>
    <string name="pref_summary_camera_option33"> </string>
    <string name="pref_camera_option43">OPTION4</string>
    <string name="pref_summary_camera_option43"> </string>
    <string name="pref_camera_option53">OPTION5</string>
    <string name="pref_summary_camera_option53"> </string>

    <string name="pref_camera_option14">OPTION1</string>
    <string name="pref_summary_camera_option14"> </string>
    <string name="pref_camera_option24">OPTION2</string>
    <string name="pref_summary_camera_option24"> </string>
    <string name="pref_camera_option34">OPTION3</string>
    <string name="pref_summary_camera_option34"> </string>
    <string name="pref_camera_option44">OPTION4</string>
    <string name="pref_summary_camera_option44"> </string>
    <string name="pref_camera_option54">OPTION5</string>
    <string name="pref_summary_camera_option54"> </string>

    <string name="pref_camera_option15">OPTION1</string>
    <string name="pref_summary_camera_option15"> </string>
    <string name="pref_camera_option25">OPTION2</string>
    <string name="pref_summary_camera_option25"> </string>
    <string name="pref_camera_option35">OPTION3</string>
    <string name="pref_summary_camera_option35"> </string>
    <string name="pref_camera_option45">OPTION4</string>
    <string name="pref_summary_camera_option45"> </string>
    <string name="pref_camera_option55">OPTION5</string>
    <string name="pref_summary_camera_option55"> </string>

    <string name="pref_camera_option16">OPTION1</string>
    <string name="pref_summary_camera_option16"> </string>
    <string name="pref_camera_option26">OPTION2</string>
    <string name="pref_summary_camera_option26"> </string>
    <string name="pref_camera_option36">OPTION3</string>
    <string name="pref_summary_camera_option36"> </string>
    <string name="pref_camera_option46">OPTION4</string>
    <string name="pref_summary_camera_option46"> </string>
    <string name="pref_camera_option56">OPTION5</string>
    <string name="pref_summary_camera_option56"> </string>

    <string name="pref_camera_option17">OPTION1</string>
    <string name="pref_summary_camera_option17"> </string>
    <string name="pref_camera_option27">OPTION2</string>
    <string name="pref_summary_camera_option27"> </string>
    <string name="pref_camera_option37">OPTION3</string>
    <string name="pref_summary_camera_option37"> </string>
    <string name="pref_camera_option47">OPTION4</string>
    <string name="pref_summary_camera_option47"> </string>
    <string name="pref_camera_option57">OPTION5</string>
    <string name="pref_summary_camera_option57"> </string>

    <string name="pref_camera_option18">OPTION1</string>
    <string name="pref_summary_camera_option18"> </string>
    <string name="pref_camera_option28">OPTION2</string>
    <string name="pref_summary_camera_option28"> </string>
    <string name="pref_camera_option38">OPTION3</string>
    <string name="pref_summary_camera_option38"> </string>
    <string name="pref_camera_option48">OPTION4</string>
    <string name="pref_summary_camera_option48"> </string>
    <string name="pref_camera_option58">OPTION5</string>
    <string name="pref_summary_camera_option58"> </string>

    <string name="connect_start">start</string>
    <string name="connect_check_wifi">check WIFI</string>
    <string name="connect_connect">connecting</string>
    <string name="connect_connecting">connecting&#8230;</string>
    <string name="connect_connected">connected</string>
    <string name="connect_connect_finished">connect finished.</string>
    <string name="connect_change_run_mode">changeRunMode</string>
    <string name="connect_restore_camera_settings">restoreCameraSettings</string>
    <string name="connect_camera_detected">Detected a camera</string>
    <string name="connect_camera_search_request">Camera Search</string>
    <string name="connect_camera_found">Found a camera</string>
    <string name="connect_camera_wait_reply">Wait reply from a camera</string>
    <string name="connect_camera_received_reply">Received reply from a camera</string>
    <string name="connect_receive_unknown_message">Received a unknown message.</string>

    <string name="camera_not_found">Not Found&#8230;</string>
    <string name="camera_connect_response_ng">Camera replies NG.</string>
    <string name="connect_camera_rejected">Camera rejected.</string>

    <string name="dialog_title_connect_failed">Connect failed.</string>
    <string name="dialog_button_retry">Retry</string>
    <string name="dialog_button_network_settings">WiFi Settings</string>

    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_message_power_off">Power Off</string>
    <string name="dialog_message_exit">Exit Application</string>

    <string name="command_line_disconnected">Camera control line is disconnected.</string>
</resources>