<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_connection_method1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:adjustViewBounds = "true"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="9pt"
            android:text="@string/label_connection_method1"
            >
        </TextView>
        <Spinner
            android:id="@+id/connection_method1"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:textSize="9pt"
            />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_connection_method2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:adjustViewBounds = "true"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="9pt"
            android:text="@string/label_connection_method2"
            >
        </TextView>
        <Spinner
            android:id="@+id/connection_method2"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:textSize="9pt"
            />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_connection_method3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:adjustViewBounds = "true"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="9pt"
            android:text="@string/label_connection_method3"
            >
        </TextView>
        <Spinner
            android:id="@+id/connection_method3"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:textSize="9pt"
            />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_connection_method4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:adjustViewBounds = "true"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="9pt"
            android:text="@string/label_connection_method4"
            >
        </TextView>
        <Spinner
            android:id="@+id/connection_method4"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:textSize="9pt"
            />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_connection_method5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:adjustViewBounds = "true"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="9pt"
            android:text="@string/label_connection_method5"
            >
        </TextView>
        <Spinner
            android:id="@+id/connection_method5"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:textSize="9pt"
            />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_connection_method6"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:adjustViewBounds = "true"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="9pt"
            android:text="@string/label_connection_method6"
            >
        </TextView>
        <Spinner
            android:id="@+id/connection_method6"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:textSize="9pt"
            />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_connection_method7"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:adjustViewBounds = "true"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="9pt"
            android:text="@string/label_connection_method7"
            >
        </TextView>
        <Spinner
            android:id="@+id/connection_method7"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:textSize="9pt"
            />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_connection_method8"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:adjustViewBounds = "true"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="9pt"
            android:text="@string/label_connection_method8"
            >
        </TextView>
        <Spinner
            android:id="@+id/connection_method8"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:textSize="9pt"
            />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

</LinearLayout>